--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,9 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
 .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
+  animation: logo-spin infinite 20s linear;
   transition: filter 300ms;
 }
 .logo:hover {
